# html-boilerplate-remover

./: .gitignore  Node.py  README.md  main.py  pyproject.toml
boilerplate_remover/: BoilerplateRemover.py  Node.py
boilerplate_remover/utils/: cache_utils.py  file_utils.py  string_utils.py
src/: main.py  requirements.txt
src/boilerplate_remover/: BoilerplateRemover.py  Node.py
src/boilerplate_remover/utils/: cache_utils.py  html_utils.py  preprocessing_utils.py  tree_utils.py
utils/: cache_utils.py  html_utils.py  preprocessing_utils.py  tree_utils.py
