[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "boilerplate-remover"
version = "0.0.9"
authors = [
    { name = "Kaneel Dias", email = "kaneeldias@gmail.com" },
]
description = "A package to remove boilerplate code from HTML files."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/furniture-helper/html-boilerplate-remover"